# finserv-automation

./: .gitignore  README.md  package-lock.json
backend/: .env.example  app.py  devin_dispatcher.py  github_client.py  main.py  models.py  pyproject.toml  slack_notifier.py
frontend/: .gitignore  index.html
frontend/src/: App.tsx  Column.tsx  IssueCard.tsx  api.ts  index.css  types.ts
